# TelescopeControl1

./: CMakeLists.txt
pyl/: CMakeLists.txt  pyl_convert.h
scripts/: InputManager.py  TelescopeComm.py  main.py
src/: main.cpp
